# sebo

./: .dockerignore  .env.prod.sample  .env.sample  .gitignore  Dockerfile  fly.sample.toml  pyproject.toml  requirements.txt
sebo/: settings.py  urls.py
store/: views.py
