[tool.poetry]
name = "sebo"
version = "0.1.0"
description = ""
authors = ["catsocks <3389801+catsocks@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "sebo"}]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2"
django-environ = "^0.10.0"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
